# cmc-chess

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  cmc-chess-test.sh  coord.c  coord.h  exit_codes.c  exit_codes.h  fmt.sh  game.c  game.h  game_assert.c  game_assert.h  game_history.c  game_history.h  game_io.c  game_io.h  game_msg.c  game_msg.h  int.h  main.c  move.c  move.h  piece.c  piece.h  send-patch.sh  util.c  util.h
docs/: StyleGuide.md
man/man3/: game_assert.3  game_assert_t.3  parse_attribute_name.3  parse_coord.3  parse_int.3  parse_kind_string.3  piece.3
man/man5/: game_assert.5
man/man6/: cmc-chess.6
tests/checkmates/: 01_wking_A1_bqueen_C3.txt
tests/generic/: 01_regular_board.txt
tests/moves/: 01_pawn.txt  02_rook.txt  03_knight.txt  04_bishop.txt  05_queen.txt  06_king.txt  07_pawn_morph.txt
